--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
+        "laravelcollective/html": "^6.2",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
